--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,113 +3,299 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@inproceedings{camps2018one,
+  title={One-class Gaussian process regressor for quality assessment of transperineal ultrasound images},
+  author={Camps, Saskia and Houben, Tim and Fontanarosa, Davide and Edwards, Christopher and Antico, Maria and Dunnhofer, Matteo and Martens, Esther and Baeza, Jose and Vanneste, Ben and van Limbergen, Evert and others},
+  booktitle={Proceedings of the 1st International Conference on Medical Imaging with Deep Learning 2018},
+  pages={1--10},
+  year={2018},
+  organization={Medical Imaging with Deep Learning Conference Committee}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@inproceedings{camps2018quality,
+  title={Quality assessment of transperineal ultrasound images of the male pelvic region using deep learning},
+  author={Camps, Saskia and Houben, Tim and Edwards, Christopher and Antico, Maria and Dunnhofer, Matteo and Martens, Esther and Baeza, Jose and Vanneste, Hen and van Limbergen, Evert and de With, Peter and others},
+  booktitle={2018 IEEE International Ultrasonics Symposium (IUS)},
+  pages={1--4},
+  year={2018},
+  organization={IEEE}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@inproceedings{dunnhofer2019visual,
+  title={Visual Tracking by means of Deep Reinforcement Learning and an Expert Demonstrator},
+  author={Dunnhofer, Matteo and Martinel, Niki and Luca Foresti, Gian and Micheloni, Christian},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision Workshops},
+  pages={0--0},
+  year={2019}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@inproceedings{martinel2017person,
+  title={Person re-identification via unsupervised transfer of learned visual representations},
+  author={Martinel, Niki and Dunnhofer, Matteo and Foresti, Gian Luca and Micheloni, Christian},
+  booktitle={Proceedings of the 11th International Conference on Distributed Smart Cameras},
+  pages={151--156},
+  year={2017},
+  organization={ACM}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{chini2018unsupervised,
+  title={Unsupervised Smoke Detection in Normally Smoking Environments},
+  author={Chini, Matteo and Martinel, Niki and Dunnhofer, Matteo and Ceschia, Carlo and Micheloni, Christian},
+  booktitle={Proceedings of the 12th International Conference on Distributed Smart Cameras},
+  pages={12},
+  year={2018},
+  organization={ACM}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{antico2020deep,
+  title={Deep Learning-Based Femoral Cartilage Automatic Segmentation in Ultrasound Imaging for Guidance in Robotic Knee Arthroscopy},
+  author={Antico, M and Sasazawa, F and Dunnhofer, M and Camps, SM and Jaiprakash, AT and Pandey, AK and Crawford, R and Carneiro, G and Fontanarosa, D},
+  journal={Ultrasound in medicine \& biology},
+  volume={46},
+  number={2},
+  pages={422--435},
+  year={2020},
+  publisher={Elsevier}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{camps2020automatic,
+  title={Automatic Quality Assessment of Transperineal Ultrasound Images of the Male Pelvic Region, Using Deep Learning},
+  author={Camps, SM and Houben, T and Carneiro, G and Edwards, C and Antico, M and Dunnhofer, M and Martens, EGHJ and Baeza, JA and Vanneste, BGL and van Limbergen, EJ and others},
+  journal={Ultrasound in medicine \& biology},
+  volume={46},
+  number={2},
+  pages={445--454},
+  year={2020},
+  publisher={Elsevier}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@inproceedings{dunnhofer2020tracking,
+  title={Tracking-by-Trackers with a Distilled and Reinforced Model},
+  author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
+  booktitle={Proceedings of the Asian Conference on Computer Vision},
+  year={2020}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@inproceedings{kristan2020eighth,
+  title={The eighth visual object tracking VOT2020 challenge results},
+  author={Kristan, Matej and Leonardis, Ale{\v{s}} and Matas, Ji{\v{r}}{\'\i} and Felsberg, Michael and Pflugfelder, Roman and K{\"a}m{\"a}r{\"a}inen, Joni-Kristian and Danelljan, Martin and Zajc, Luka {\v{C}}ehovin and Luke{\v{z}}i{\v{c}}, Alan and Drbohlav, Ondrej and others},
+  booktitle={European Conference on Computer Vision},
+  pages={547--601},
+  year={2020},
+  organization={Springer, Cham}
+}
+
+@inproceedings{dunnhofer2020exploration,
+  title={An Exploration of Target-Conditioned Segmentation Methods for Visual Object Trackers},
+  author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
+  booktitle={European Conference on Computer Vision},
+  pages={618--636},
+  year={2020},
+  organization={Springer, Cham}
+}
+
+@article{dunnhofer2021weakly,
+  title={Weakly-Supervised Domain Adaptation of Deep Regression Trackers via Reinforced Knowledge Distillation},
+  author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
+  journal={IEEE Robotics and Automation Letters},
+  volume={6},
+  number={3},
+  pages={5016--5023},
+  year={2021},
+  publisher={IEEE}
+}
+
+@article{martinel2021lord,
+  title={Lord of the Rings: Hanoi Pooling and Self-Knowledge Distillation for Fast and Accurate Vehicle Re-Identification},
+  author={Martinel, Niki and Dunnhofer, Matteo and Pucci, Rita and Foresti, Gian Luca and Micheloni, Christian},
+  journal={IEEE Transactions on Industrial Informatics},
+  year={2021},
+  publisher={IEEE}
+}
+
+@article{miani2021surrogate,
+  title={Surrogate Safety Measures Prediction at Multiple Timescales in V2P Conflicts Based on Gated Recurrent Unit},
+  author={Miani, Matteo and Dunnhofer, Matteo and Micheloni, Christian and Marini, Andrea and Baldo, Nicola},
+  journal={Sustainability},
+  volume={13},
+  number={17},
+  pages={9681},
+  year={2021},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@inproceedings{dunnhofer2021first,
+  title={Is First Person Vision Challenging for Object Tracking?},
+  author={Dunnhofer, Matteo and Furnari, Antonino and Farinella, Giovanni Maria and Micheloni, Christian},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
+  pages={2698--2710},
+  year={2021}
+}
+
+@inproceedings{kristan2019seventh,
+  title={The seventh visual object tracking vot2019 challenge results},
+  author={Kristan, Matej and Matas, Jiri and Leonardis, Ales and Felsberg, Michael and Pflugfelder, Roman and Kamarainen, Joni-Kristian and ˇCehovin Zajc, Luka and Drbohlav, Ondrej and Lukezic, Alan and Berg, Amanda and others},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision Workshops},
+  pages={0--0},
+  year={2019}
+}
+
+@inproceedings{kristan2021ninth,
+  title={The Ninth Visual Object Tracking VOT2021 Challenge Results},
+  author={Kristan, Matej and Matas, Ji{\v{r}}{\'\i} and Leonardis, Ale{\v{s}} and Felsberg, Michael and Pflugfelder, Roman and K{\"a}m{\"a}r{\"a}inen, Joni-Kristian and Chang, Hyung Jin and Danelljan, Martin and Cehovin, Luka and Luke{\v{z}}i{\v{c}}, Alan and others},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
+  pages={2711--2738},
+  year={2021}
+}
+
+@article{miani2021bituminous,
+  title={Bituminous Mixtures Experimental Data Modeling Using a Hyperparameters-Optimized Machine Learning Approach},
+  author={Miani, Matteo and Dunnhofer, Matteo and Rondinella, Fabio and Manthos, Evangelos and Valentin, Jan and Micheloni, Christian and Baldo, Nicola},
+  journal={Applied Sciences},
+  volume={11},
+  number={24},
+  pages={11710},
+  year={2021},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{miani2022young,
+  title={Young drivers’ pedestrian anti-collision braking operation data modelling for ADAS development},
+  author={Miani, Matteo and Dunnhofer, Matteo and Micheloni, Christian and Marini, Andrea and Baldo, Nicola},
+  journal={Transportation Research Procedia},
+  volume={60},
+  pages={432--439},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{dunnhofer2022combining,
+  title={Combining complementary trackers for enhanced long-term visual object tracking},
+  author={Dunnhofer, Matteo and Simonato, Kristian and Micheloni, Christian},
+  journal={Image and Vision Computing},
+  volume={122},
+  pages={104448},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@phdthesis{dunnhofer2022visual,
+  title={Visual Object Tracking with Deep Learning},
+  author={Dunnhofer, Matteo},
+  year={2022},
+  school={University of Udine}
+}
+
+@article{dunnhofer2022deep,
+  title={Deep convolutional feature details for better knee disorder diagnoses in magnetic resonance images},
+  author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
+  journal={Computerized Medical Imaging and Graphics},
+  volume={102},
+  pages={102142},
+  year={2022},
+  publisher={Pergamon}
+}
+
+@article{dunnhofer2023visual,
+  title={Visual Object Tracking in First Person Vision},
+  author={Dunnhofer, Matteo and Furnari, Antonino and Farinella, Giovanni Maria and Micheloni, Christian},
+  journal={International Journal of Computer Vision},
+  volume={131},
+  number={1},
+  pages={259--283},
+  year={2023},
+  publisher={Springer}
+}
+
+@inproceedings{dunnhofer2022cocolot,
+  title={CoCoLoT: Combining Complementary Trackers in Long-Term Visual Tracking},
+  author={Dunnhofer, Matteo and Micheloni, Christian},
+  booktitle={2022 26th International Conference on Pattern Recognition (ICPR)},
+  pages={5132--5139},
+  year={2022},
+  organization={IEEE}
+}
+
+@inproceedings{dunnhofer2021improving,
+  title={Improving MRI-based knee disorder diagnosis with pyramidal feature details},
+  author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
+  booktitle={Medical Imaging with Deep Learning},
+  pages={131--147},
+  year={2021},
+  organization={PMLR}
+}
+
+@inproceedings{kristan2022tenth,
+  title={The tenth visual object tracking vot2022 challenge results},
+  author={Kristan, Matej and Leonardis, Ale{\v{s}} and Matas, Ji{\v{r}}{\'\i} and Felsberg, Michael and Pflugfelder, Roman and K{\"a}m{\"a}r{\"a}inen, Joni-Kristian and Chang, Hyung Jin and Danelljan, Martin and Zajc, Luka {\v{C}}ehovin and Luke{\v{z}}i{\v{c}}, Alan and others},
+  booktitle={European Conference on Computer Vision},
+  pages={431--460},
+  year={2022},
+  organization={Springer Nature Switzerland}
+}
+
+@inproceedings{dunnhofer2023visualizing,
+  title={Visualizing Skiers' Trajectories in Monocular Videos},
+  author={Dunnhofer, Matteo and Sordi, Luca and Micheloni, Christian},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={5187--5197},
+  year={2023}
+}
+
+@inproceedings{khan2023lbkenet,
+  title={LBKENet: Lightweight Blur Kernel Estimation Network for Blind Image Super-Resolution},
+  author={Khan, Asif Hussain and Umer, Rao Muhammad and Dunnhofer, Matteo and Micheloni, Christian and Martinel, Niki},
+  booktitle={International Conference on Image Analysis and Processing},
+  pages={209--222},
+  year={2023},
+  organization={Springer}
+}
+
+@inproceedings{kristan2023first,
+  title={The First Visual Object Tracking Segmentation VOTS2023 Challenge Results},
+  author={Kristan, Matej and Matas, Ji{\v{r}}{\'\i} and Danelljan, Martin and Felsberg, Michael and Chang, Hyung Jin and Zajc, Luka {\v{C}}ehovin and Luke{\v{z}}i{\v{c}}, Alan and Drbohlav, Ondrej and Zhang, Zhongqun and Tran, Khanh-Tung and others},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
+  pages={1796--1818},
+  year={2023}
+}
+
+@inproceedings{dunnhofer2024tracking,
+  title={Tracking Skiers from the Top to the Bottom},
+  author={Dunnhofer, Matteo and Sordi, Luca and Martinel, Niki and Micheloni, Christian},
+  booktitle={Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)},
+  year={2024}
+}
+
+@article{dunnhofer2024visual,
+  title={Visual tracking in camera-switching outdoor sport videos: Benchmark and baselines for skiing},
+  author={Dunnhofer, Matteo and Micheloni, Christian},
+  journal={Computer Vision and Image Understanding},
+  volume={243},
+  pages={103978},
+  year={2024},
+  publisher={Academic Press}
+}
+
+@inproceedings{dunnhofer2023automatic,
+  title={Automatic Video-Based Reconstruction of the Trajectories Performed by Skiers},
+  author={Dunnhofer, Matteo and Micheloni, Christian},
+  booktitle={9th International Congress on Science and Skiing (ICSS)},
+  year={2023}
+}
+
+@article{nottebaum2024lowformer,
+  title={LowFormer: Hardware Efficient Design for Convolutional Transformer Backbones},
+  author={Nottebaum, Moritz and Dunnhofer, Matteo and Micheloni, Christian},
+  journal={arXiv preprint arXiv:2409.03460},
+  year={2024}
+}
+
+@article{dunnhofer2020siam,
+  title={Siam-U-Net: encoder-decoder siamese network for knee cartilage tracking in ultrasound images},
+  author={Dunnhofer, Matteo and Antico, Maria and Sasazawa, Fumio and Takeda, Yu and Camps, Saskia and Martinel, Niki and Micheloni, Christian and Carneiro, Gustavo and Fontanarosa, Davide},
+  journal={Medical Image Analysis},
+  volume={60},
+  pages={101631},
+  year={2020},
+  publisher={Elsevier}
 }
