--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,37 +3,11 @@
 
 @string{aps = {American Physical Society,}}
 
-@inproceedings{camps2018one,
-  title={One-class Gaussian process regressor for quality assessment of transperineal ultrasound images},
-  author={Camps, Saskia and Houben, Tim and Fontanarosa, Davide and Edwards, Christopher and Antico, Maria and Dunnhofer, Matteo and Martens, Esther and Baeza, Jose and Vanneste, Ben and van Limbergen, Evert and others},
-  booktitle={Proceedings of the 1st International Conference on Medical Imaging with Deep Learning 2018},
-  pages={1--10},
-  year={2018},
-  organization={Medical Imaging with Deep Learning Conference Committee}
-}
-
-@inproceedings{camps2018quality,
-  title={Quality assessment of transperineal ultrasound images of the male pelvic region using deep learning},
-  author={Camps, Saskia and Houben, Tim and Edwards, Christopher and Antico, Maria and Dunnhofer, Matteo and Martens, Esther and Baeza, Jose and Vanneste, Hen and van Limbergen, Evert and de With, Peter and others},
-  booktitle={2018 IEEE International Ultrasonics Symposium (IUS)},
-  pages={1--4},
-  year={2018},
-  organization={IEEE}
-}
-
-@inproceedings{dunnhofer2019visual,
-  title={Visual Tracking by means of Deep Reinforcement Learning and an Expert Demonstrator},
-  author={Dunnhofer, Matteo and Martinel, Niki and Luca Foresti, Gian and Micheloni, Christian},
-  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision Workshops},
-  pages={0--0},
-  year={2019}
-}
-
 @inproceedings{martinel2017person,
   title={Person re-identification via unsupervised transfer of learned visual representations},
   author={Martinel, Niki and Dunnhofer, Matteo and Foresti, Gian Luca and Micheloni, Christian},
   booktitle={Proceedings of the 11th International Conference on Distributed Smart Cameras},
-  pages={151--156},
+  doi={http://doi.org/10.1145/3131885.3131923},
   year={2017},
   organization={ACM}
 }
@@ -42,45 +16,89 @@
   title={Unsupervised Smoke Detection in Normally Smoking Environments},
   author={Chini, Matteo and Martinel, Niki and Dunnhofer, Matteo and Ceschia, Carlo and Micheloni, Christian},
   booktitle={Proceedings of the 12th International Conference on Distributed Smart Cameras},
-  pages={12},
+  doi={https://doi.org/10.1145/3243394.3243699},
   year={2018},
   organization={ACM}
+}
+
+@inproceedings{camps2018one,
+  title={One-class Gaussian process regressor for quality assessment of transperineal ultrasound images},
+  author={Camps, Saskia and Houben, Tim and Fontanarosa, Davide and Edwards, Christopher and Antico, Maria and Dunnhofer, Matteo and Martens, Esther and Baeza, Jose and Vanneste, Ben and van Limbergen, Evert and others},
+  booktitle={1st International Conference on Medical Imaging with Deep Learning (MIDL) 2018},
+  doi={https://openreview.net/forum?id=r1s0gx3iG},
+  year={2018}
+}
+
+@inproceedings{camps2018quality,
+  title={Quality assessment of transperineal ultrasound images of the male pelvic region using deep learning},
+  author={Camps, Saskia and Houben, Tim and Edwards, Christopher and Antico, Maria and Dunnhofer, Matteo and Martens, Esther and Baeza, Jose and Vanneste, Hen and van Limbergen, Evert and de With, Peter and others},
+  booktitle={2018 IEEE International Ultrasonics Symposium (IUS)},
+  doi={https://ieeexplore.ieee.org/document/8579839},
+  year={2018},
+}
+
+@inproceedings{dunnhofer2019visual,
+  title={Visual Tracking by means of Deep Reinforcement Learning and an Expert Demonstrator},
+  author={Dunnhofer, Matteo and Martinel, Niki and Luca Foresti, Gian and Micheloni, Christian},
+  booktitle={IEEE/CVF International Conference on Computer Vision (ICCV) 2019, Visual Object Tracking Challenge VOT2019 workshop},
+  html={http://openaccess.thecvf.com/content_ICCVW_2019/html/VOT/Dunnhofer_Visual_Tracking_by_Means_of_Deep_Reinforcement_Learning_and_an_ICCVW_2019_paper.html},
+  arxiv={https://arxiv.org/abs/1909.08487},
+  video={ttps://youtu.be/jSGLafk4-G4},
+  poster={https://drive.google.com/file/d/1TLq1UtptYcSr2wMEnRfIatCZJpwV7Z88/view?usp=sharing},
+  year={2019}
+}
+
+@inproceedings{kristan2019seventh,
+  title={The seventh visual object tracking vot2019 challenge results},
+  author={Kristan, Matej and Matas, Jiri and Leonardis, Ales and Felsberg, Michael and Pflugfelder, Roman and Kamarainen, Joni-Kristian and ˇCehovin Zajc, Luka and Drbohlav, Ondrej and Lukezic, Alan and Berg, Amanda and others},
+  booktitle={IEEE/CVF International Conference on Computer Vision (ICCV) 2019, Visual Object Tracking Challenge VOT2019 workshop},
+  html={http://openaccess.thecvf.com/content_ICCVW_2019/html/VOT/Kristan_The_Seventh_Visual_Object_Tracking_VOT2019_Challenge_Results_ICCVW_2019_paper.html},
+  year={2019}
+}
+
+@article{dunnhofer2020siam,
+  title={Siam-U-Net: encoder-decoder siamese network for knee cartilage tracking in ultrasound images},
+  author={Dunnhofer, Matteo and Antico, Maria and Sasazawa, Fumio and Takeda, Yu and Camps, Saskia and Martinel, Niki and Micheloni, Christian and Carneiro, Gustavo and Fontanarosa, Davide},
+  journal={Medical Image Analysis},
+  html={https://www.sciencedirect.com/science/article/abs/pii/S1361841519301677},
+  video={https://youtu.be/nYTlEyMoj0s},
+  year={2020},
+  publisher={Elsevier}
 }
 
 @article{antico2020deep,
   title={Deep Learning-Based Femoral Cartilage Automatic Segmentation in Ultrasound Imaging for Guidance in Robotic Knee Arthroscopy},
   author={Antico, M and Sasazawa, F and Dunnhofer, M and Camps, SM and Jaiprakash, AT and Pandey, AK and Crawford, R and Carneiro, G and Fontanarosa, D},
-  journal={Ultrasound in medicine \& biology},
-  volume={46},
-  number={2},
-  pages={422--435},
+  journal={Ultrasound in Medicine \& Biology},
+  html={https://www.sciencedirect.com/science/article/abs/pii/S0301562919315522},
   year={2020},
-  publisher={Elsevier}
 }
 
 @article{camps2020automatic,
   title={Automatic Quality Assessment of Transperineal Ultrasound Images of the Male Pelvic Region, Using Deep Learning},
   author={Camps, SM and Houben, T and Carneiro, G and Edwards, C and Antico, M and Dunnhofer, M and Martens, EGHJ and Baeza, JA and Vanneste, BGL and van Limbergen, EJ and others},
-  journal={Ultrasound in medicine \& biology},
-  volume={46},
-  number={2},
-  pages={445--454},
+  journal={Ultrasound in Medicine \& Biology},
+  html={https://www.sciencedirect.com/science/article/abs/pii/S0301562919315649},
   year={2020},
-  publisher={Elsevier}
 }
 
 @inproceedings{dunnhofer2020tracking,
   title={Tracking-by-Trackers with a Distilled and Reinforced Model},
   author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
-  booktitle={Proceedings of the Asian Conference on Computer Vision},
-  year={2020}
+  booktitle={Asian Conference on Computer Vision (ACCV) 2020},
+  year={2020},
+  html={https://openaccess.thecvf.com/content/ACCV2020/html/Dunnhofer_Tracking-by-Trackers_with_a_Distilled_and_Reinforced_Model_ACCV_2020_paper.html},
+  video={https://youtu.be/VzeoHQQl-rA},
+  code={https://github.com/matteo-dunnhofer/vot-kd-rl},
+  website={https://accv2020.github.io/miniconf/poster_141.html},
+  arxiv={https://arxiv.org/abs/2007.04108}
 }
 
 @inproceedings{kristan2020eighth,
   title={The eighth visual object tracking VOT2020 challenge results},
   author={Kristan, Matej and Leonardis, Ale{\v{s}} and Matas, Ji{\v{r}}{\'\i} and Felsberg, Michael and Pflugfelder, Roman and K{\"a}m{\"a}r{\"a}inen, Joni-Kristian and Danelljan, Martin and Zajc, Luka {\v{C}}ehovin and Luke{\v{z}}i{\v{c}}, Alan and Drbohlav, Ondrej and others},
-  booktitle={European Conference on Computer Vision},
-  pages={547--601},
+  booktitle={European Conference on Computer Vision (ECCV) 2020, Visual Object Tracking Challenge VOT2020 workshop},
+  html={https://link.springer.com/chapter/10.1007/978-3-030-68238-5_39},
   year={2020},
   organization={Springer, Cham}
 }
@@ -88,11 +106,15 @@
 @inproceedings{dunnhofer2020exploration,
   title={An Exploration of Target-Conditioned Segmentation Methods for Visual Object Trackers},
   author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
-  booktitle={European Conference on Computer Vision},
-  pages={618--636},
+  booktitle={European Conference on Computer Vision (ECCV) 2020, Visual Object Tracking Challenge VOT2020 workshop},
+  html={https://link.springer.com/chapter/10.1007%2F978-3-030-68238-5_41},
+  arxiv={http://arxiv.org/abs/2008.00992},
+  video={https://youtu.be/9af8zsoXeE8},
   year={2020},
   organization={Springer, Cham}
 }
+
+
 
 @article{dunnhofer2021weakly,
   title={Weakly-Supervised Domain Adaptation of Deep Regression Trackers via Reinforced Knowledge Distillation},
@@ -132,13 +154,7 @@
   year={2021}
 }
 
-@inproceedings{kristan2019seventh,
-  title={The seventh visual object tracking vot2019 challenge results},
-  author={Kristan, Matej and Matas, Jiri and Leonardis, Ales and Felsberg, Michael and Pflugfelder, Roman and Kamarainen, Joni-Kristian and ˇCehovin Zajc, Luka and Drbohlav, Ondrej and Lukezic, Alan and Berg, Amanda and others},
-  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision Workshops},
-  pages={0--0},
-  year={2019}
-}
+
 
 @inproceedings{kristan2021ninth,
   title={The Ninth Visual Object Tracking VOT2021 Challenge Results},
@@ -290,12 +306,4 @@
   year={2024}
 }
 
-@article{dunnhofer2020siam,
-  title={Siam-U-Net: encoder-decoder siamese network for knee cartilage tracking in ultrasound images},
-  author={Dunnhofer, Matteo and Antico, Maria and Sasazawa, Fumio and Takeda, Yu and Camps, Saskia and Martinel, Niki and Micheloni, Christian and Carneiro, Gustavo and Fontanarosa, Davide},
-  journal={Medical Image Analysis},
-  volume={60},
-  pages={101631},
-  year={2020},
-  publisher={Elsevier}
-}
+
