--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -45,7 +45,8 @@
   arxiv={https://arxiv.org/abs/1909.08487},
   video={ttps://youtu.be/jSGLafk4-G4},
   poster={https://drive.google.com/file/d/1TLq1UtptYcSr2wMEnRfIatCZJpwV7Z88/view?usp=sharing},
-  year={2019}
+  year={2019},
+  selected={true}
 }
 
 @inproceedings{kristan2019seventh,
@@ -63,7 +64,8 @@
   html={https://www.sciencedirect.com/science/article/abs/pii/S1361841519301677},
   video={https://youtu.be/nYTlEyMoj0s},
   year={2020},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  selected={true}
 }
 
 @article{antico2020deep,
@@ -91,7 +93,8 @@
   video={https://youtu.be/VzeoHQQl-rA},
   code={https://github.com/matteo-dunnhofer/vot-kd-rl},
   website={https://accv2020.github.io/miniconf/poster_141.html},
-  arxiv={https://arxiv.org/abs/2007.04108}
+  arxiv={https://arxiv.org/abs/2007.04108},
+  selected={true}
 }
 
 @inproceedings{kristan2020eighth,
@@ -120,11 +123,12 @@
   title={Weakly-Supervised Domain Adaptation of Deep Regression Trackers via Reinforced Knowledge Distillation},
   author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
   journal={IEEE Robotics and Automation Letters},
-  volume={6},
-  number={3},
-  pages={5016--5023},
+  html={https://ieeexplore.ieee.org/document/9394708},
+  video={https://youtu.be/3T3BJudDSwQ},
+  arxiv={http://arxiv.org/abs/2103.14496},
   year={2021},
-  publisher={IEEE}
+  publisher={IEEE},
+  selected={true}
 }
 
 @article{martinel2021lord,
